--- a/v0.0.4_changelog.md
+++ b/v0.0.4_changelog.md
@@ -1,3 +1,11 @@
+Version 0.0.4 Changelog
+- Edited and moved the head count for eyelander
+- Edited some main menu buttons
+- As of now, all of scout and demoman's weapons are (or, at least, should be) fully functional and updated.
+- Don't expect anything main menu related any time soon. editing that sucks and i dont feel like it.
+
+
+
 Version 0.0.3 Changelog
 - Added shadow to killstreak 
 - Edited and moved demo's Charge meter 
