--- a/v0.0.5_changelog.md
+++ b/v0.0.5_changelog.md
@@ -1,3 +1,14 @@
+Version 0.0.5 Changelog
+- Changed main menu background
+- As of now, the wallpaper is a "placeholder", and by placeholder i mean ill change it later when im not lazy
+- Rearranged rank + xp bar
+- The hidden Competitive xp requirements + xp bar are now shown. Why this isnt default i couldnt tell you
+- Removed friends panel (this will be returned when i decide where to put it)
+- Removed promotions panel (this will not be returned, the mann co store is garbage.)
+- Removed bottom panel border+background
+
+
+
 Version 0.0.4 Changelog
 - Edited and moved the head count for eyelander
 - Edited some main menu buttons
